--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   audio_video_progress_bar: ^2.0.2
+  permission_handler: ^11.3.1
+  assets_audio_player: ^3.1.1
+  on_audio_query: ^2.9.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
