--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   audioplayers: ^6.0.0
   just_audio: ^0.9.37
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
