--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_styled_toast: ^2.2.1
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
