--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_styled_toast: ^2.2.1
   page_transition: ^2.1.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
