--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,12 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
   freezed_annotation: ^2.4.1
-  audioplayers: ^6.0.0
-  just_audio: ^0.9.37
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_styled_toast: ^2.2.1
-  page_transition: ^2.1.0
   shared_preferences: ^2.2.3
+  share_plus: ^9.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
