launch icon added and some update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,12 @@ dev_dependencies:
   freezed: ^2.5.2
   build_runner: ^2.4.9
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/musicvoc.jpg" 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
