--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.0
-  get: ^4.6.6
   audio_video_progress_bar: ^2.0.2
   permission_handler: ^11.3.1
   assets_audio_player: ^3.1.1
@@ -51,6 +50,8 @@ dependencies:
   share_plus: ^9.0.0
   url_launcher: ^6.2.6
   page_transition: ^2.1.0
+  provider: ^6.1.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
